--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proto-game",
-  "author" : "smitty-nz",
-  "version": "1.1.2",
+  "author" : "smith",
+  "version": "1.1.4",
   "license": "MIT",
   "repository": {
     "type" : "git",
